db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 0
